--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -91,8 +91,8 @@ stages:
 
           - template: .\devops\templates\dotnet-build.yaml
             parameters:
-              projPath: src/Umbrella.DDD.Tests
-              projName: Umbrella.DDD.Tests
+              projPath: src/Umbrella.DDD.GCP
+              projName: Umbrella.DDD.GCP
               publishRequired: false
 
           - task: SonarCloudAnalyze@1
