--- a/src/Umbrella.DDD.GCP/Umbrella.DDD.GCP.csproj
+++ b/src/Umbrella.DDD.GCP/Umbrella.DDD.GCP.csproj
@@ -5,7 +5,7 @@
 		<Nullable>enable</Nullable>
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<LangVersion>10.0</LangVersion>
-		<NoWarn>S3925;S112;S2583</NoWarn>
+		<NoWarn>S1905;CS8603;S3925;S112;S2583</NoWarn>
 	</PropertyGroup>
 
 	<PropertyGroup>
