--- a/src/Umbrella.DDD.GCP/Umbrella.DDD.GCP.csproj
+++ b/src/Umbrella.DDD.GCP/Umbrella.DDD.GCP.csproj
@@ -3,8 +3,8 @@
 	<PropertyGroup>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<TargetFramework>netstandard2.1</TargetFramework>
-		<LangVersion>10.0</LangVersion>
+		<TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
+		<LangVersion>latest</LangVersion>
 		<NoWarn>S1905;CS8603;S3925;S112;S2583</NoWarn>
 	</PropertyGroup>
 
