--- a/src/Umbrella.DDD/Umbrella.DDD.csproj
+++ b/src/Umbrella.DDD/Umbrella.DDD.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
-    <NoWarn>S1905;CS8603;S3925;S112;S2583;S3246;S3885</NoWarn>
+    <NoWarn>S1905;CS8603;S3925;S112;S2583;S3246;S3885;CS8600</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup>
