--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,10 +29,10 @@ parameters:
     default: 1
   - name: MinorVersion
     displayName: "Minor Version"
-    default: 0
+    default: 1
   - name: PatchVersion
     displayName: "Patch Version"
-    default: 4
+    default: 0
   - name: authors
     displayName: "Names of authors of the target package"
     default: "FG"
@@ -85,7 +85,7 @@ stages:
                 # Additional properties that will be passed to the scanner,
                 # Put one key=value per line, example:
                 sonar.exclusions=**/obj/**,**/*.dll,**/*.Tests/**,**/*.Tests/**/*.cs
-                sonar.cs.vstest.reportsPaths=$(Agent.TempDirectory)/*.trx
+                sonar.cs.vstest.reportsPaths=$(Agent.TempDirectory)/**/*.trx
                 sonar.cs.opencover.reportsPaths=$(Build.SourcesDirectory)/**/$(testReportFileName)
                 sonar.cs.vscoveragexml.reportsPaths=coverage.xml
             condition: eq(${{ parameters.SonarScanEnabled }}, true)
