--- a/src/Umbrella.DDD.WebApi/Properties/launchSettings.json
+++ b/src/Umbrella.DDD.WebApi/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:29537",
-      "sslPort": 44344
+      "applicationUrl": "http://localhost:28249",
+      "sslPort": 44351
     }
   },
   "profiles": {
-    "Umbrella.DDD.Api": {
+    "UMbrella.DDD.WebApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7271;http://localhost:5077",
+      "applicationUrl": "https://localhost:7227;http://localhost:5064",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
