upgrade dotnet versoin

--- a/src/Umbrella.DDD.GCP/Umbrella.DDD.GCP.csproj
+++ b/src/Umbrella.DDD.GCP/Umbrella.DDD.GCP.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<TargetFramework>netstandard2.1</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<LangVersion>latest</LangVersion>
 		<NoWarn>S1905;CS8603;S3925;S112;S2583</NoWarn>
 	</PropertyGroup>
