--- a/src/Umbrella.DDD/Umbrella.DDD.csproj
+++ b/src/Umbrella.DDD/Umbrella.DDD.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
     <NoWarn>S1905;CS8603;S3925;S112;S2583;S3246;S3885;CS8600</NoWarn>
