--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,10 +41,11 @@ parameters:
 extends:
   template: dotnet-pakages-pipeline.1.2.yaml@coreTemplates
   parameters:
-    MajorVersion: 2
+    MajorVersion: 8
     MinorVersion: 0
     PatchVersion: 0
     Copyright: "FG 2022-2023"
+    TargetDotNetFramework: 8.x
     SonarScanEnabled: ${{ parameters.inputSonarScanEnabled }}
     SonarSettings:
       ProjectKey: Umbrella.DDD
